Fix T66699 EEVEE: Material Preview "World" option doesn't work

Just hide the button for now.